2008-05-29  Thomas Schwinge  <tschwinge@gnu.org>

	* Makefile.am (t_setjmp_CPPFLAGS): Remove special `printf' handling.

2008-05-29  Neal H. Walfield  <neal@gnu.org>

	* ia32-crt0.S: Increase size of stack.
	(stack): Declare.
	(stack_end): Likewise.

2008-05-28  Neal H. Walfield  <neal@gnu.org>

	* process-spawn.c (process_spawn): Update use of
	folio_object_alloc to be consistent with new API.

2008-02-21  Neal H. Walfield  <neal@gnu.org>

	* Makefile.am (COMMON_CPPFLAGS): Remove variable.
	(libc_parts_a_CPPFLAGS): Set to $(USER_CPPFLAGS).
	(libc_parts_a_CFLAGS): New variable.
	(libc_kernel_a_CPPFLAGS): Set to $(KERNEL_CPPFLAGS).
	(libc_kernel_a_CFLAGS): New variable.
	(t_setjmp_CPPFLAGS): Remove use of $(COMMON_CPPFLAGS) with
	$(CHECK_CPPFLAGS).

2008-02-20  Thomas Schwinge  <tschwinge@gnu.org>

	* alloca.h: New file, from today's glibc CVS HEAD.

2008-02-16  Neal H. Walfield  <neal@gnu.org>

	* process-spawn.c (process_spawn) [RM_INTERN]: Don't take
	LRU_LOCK.

2008-02-13  Neal H. Walfield  <neal@gnu.org>

	* assert.h (assertx): Improve printing of backtrace.

2008-02-13  Neal H. Walfield  <neal@gnu.org>

	* ia32-cmain.c (cmain): Update user of _pthread_init_routine to
	reflect API change.

2008-02-11  Neal H. Walfield  <neal@gnu.org>

	* process-spawn.h: New file.
	* process-spawn.c: New file.
	* Makefile.am (common_sources): Add process-spawn.h and
	process-spawn.c.

2008-02-11  Neal H. Walfield  <neal@gnu.org>

	* loader.h (loader_allocate_object_callback_t): Add parameter ro.
	* loader.c (loader_elf_load): When calling ALLOC, pass whether or
	not the page should be mapped read-only to the callback.

2008-02-11  Neal H. Walfield  <neal@gnu.org>

	* ia32-cmain.c (program_name): Change type to char *.
	* t-setjmp.c (program_name): Likewise.
	* assert.h (assertx): Change program_name's type to char *.

2008-02-11  Neal H. Walfield  <neal@gnu.org>

	* ia32-crt0.S (_start): Clear EBP before jumping to cmain.

	* backtrace.c (backtrace): Limit to 21 stack frames.
