@@ -1,0 +1,64 @@
+/*
+   Copyright (C) 2008 Free Software Foundation, Inc.
+
+   This file is part of the GNU Hurd.
+
+   This program is free software: you can redistribute it and/or modify
+   it under the terms of the GNU General Public License as published by
+   the Free Software Foundation, either version 3 of the License, or
+   (at your option) any later version.
+
+   This program is distributed in the hope that it will be useful,
+   but WITHOUT ANY WARRANTY; without even the implied warranty of
+   MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
+   GNU General Public License for more details.
+
+   You should have received a copy of the GNU General Public License
+   along with this program.  If not, see <http://www.gnu.org/licenses/>.
+*/
+
+#if defined(_ENABLE_TESTS) || ! defined(RM_INTERN)
+# include_next <string.h>
+#else
+
+# ifndef _STRING_H
+# define _STRING_H
+
+#define __need_NULL
+#define __need_size_t
+#include <stddef.h>
+
+/* TODO.  Move to newlib, because that's where the ROUTINES come from?  */
+void *memcpy (void *, const void *, size_t);
+void *memmove (void *, const void *, size_t);
+void *memset (void *, int, size_t);
+int strcmp (const char *, const char *);
+int strncmp (const char *, const char *, size_t);
+size_t strlen (const char *);
+
+/* From glibc.  */
+
+/* Duplicate S, returning an identical alloca'd string.  */
+# define strdupa(s)							      \
+  (__extension__							      \
+    ({									      \
+      __const char *__old = (s);					      \
+      size_t __len = strlen (__old) + 1;				      \
+      char *__new = (char *) __builtin_alloca (__len);			      \
+      (char *) memcpy (__new, __old, __len);				      \
+    }))
+
+/* Return an alloca'd copy of at most N bytes of string.  */
+# define strndupa(s, n)							      \
+  (__extension__							      \
+    ({									      \
+      __const char *__old = (s);					      \
+      size_t __len = strnlen (__old, (n));				      \
+      char *__new = (char *) __builtin_alloca (__len + 1);		      \
+      __new[__len] = '\0';						      \
+      (char *) memcpy (__new, __old, __len);				      \
+    }))
+
+# endif /* _STRING_H */
+
+#endif /* _ENABLE_TESTS, RM_INTERN */
